# sellersprite-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
docs/: mcp-api-source.md
scripts/: docs_manager.py  package_skills.py  sync-skills-to-clawhub.ps1
src/sellersprite_cli/: __init__.py  cli.py  errors.py  generators.py  markdown_utils.py  mcp_client.py  registry.py
src/sellersprite_cli/reference/: aba_research_monthly.md  aba_research_trend.md  aba_research_weekly.md  api_appendix.md  asin_coupon_trend.md  asin_detail.md  asin_detail_with_coupon_trend.md  asin_prediction.md  asin_sales_trend.md  bsr_prediction.md  competitor_lookup.md  google_trend.md  keepa_info.md  keyword_miner.md  keyword_order.md  keyword_research.md  keyword_research_trends.md  market_brand_concentration.md  market_ebc_distribution.md  market_listing_date_distribution.md  market_listing_trend_distribution.md  market_price_distribution.md  market_product_concentration.md  market_product_demand_trend.md  market_rating_distribution.md  market_ratings_count_distribution.md  market_research.md  market_research_statistics.md  market_seller_concentration.md  market_seller_country_distribution.md  market_seller_type_concentration.md  product_node.md  product_research.md  review.md  trademark_country_list.md  trademark_detail.md  trademark_list.md  trademark_stats.md  traffic_extend.md  traffic_keyword.md  (+4 more)
src/sellersprite_cli/skills/: README.md  SKILL.md  agent-instructions.md
src/sellersprite_cli/skills/category-structure/: high-margin-lightweight.md  (+2 more)
(+41 files in other folders)
