[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sellersprite-cli"
version = "0.1.8"
description = "卖家精灵 CLI — 交互式终端工具 + MCP 客户端 + 27 AI Skills，通过 MCP 调用 36 个 Amazon 数据工具"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
sellersprite = "sellersprite_cli.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sellersprite_cli*"]

[tool.setuptools.package-data]
sellersprite_cli = ["skills/**/*"]

[project.urls]
Homepage = "https://www.sellersprite.com"
Documentation = "https://mcp.sellersprite.com"
